@@ -60,6 +60,11 @@
              <version>5.7.2</version>
              <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>11.1.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -87,6 +92,10 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>r8.App</mainClass>
+                            <options>
+                                <option>--add-exports</option>
+                                <option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
+                            </options>
                         </configuration>
                     </execution>
                 </executions>
